--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-server": "^18.0.5",
     "@angular/router": "^18.0.5",
     "@angular/ssr": "^18.0.6",
-    "@microsoft/signalr": "^8.0.0",
+    "@microsoft/signalr": "7.0.14",
     "@ngrx/data": "^18.0.0",
     "@ngrx/effects": "^18.0.0",
     "@ngrx/entity": "^18.0.0",
