--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,23 @@
-version: '3'
 services:
   api:
     build:
       context: ./chat-api
       dockerfile:  ./Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=1234
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+    volumes:
+      - ~/.aspnet/https:/https:ro
     ports:
-      - 32770:8081
-    depends_on:
-      - db
+      - 32771:80
+      - 32770:443
   ui:
     build:
       context: ./chat-ui
       dockerfile: ./Dockerfile
     ports:
-      - 3000:4000
+      - 4200:4000
     depends_on:
       - api
-  db:
-    image: postgres
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
